--- a/Datenbank_Demo/.classpath
+++ b/Datenbank_Demo/.classpath
@@ -7,5 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="mariadb-java-client-2.7.4.jar"/>
+	<classpathentry kind="lib" path="sqlite-jdbc-3.36.0.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
